--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Notes" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Notes" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
@@ -11,8 +11,9 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-
         <!-- Customize your theme here. -->
+        <item name="actionModeBackground">@color/primaryColor</item>
+        <item name="windowActionModeOverlay">true</item>
     </style>
 
     <style name="Title">
@@ -26,11 +27,11 @@
     </style>
 
     <style name="Icon">
-        <item name="backgroundTint">@color/primaryColor</item>
+        <item name="backgroundTint">@color/secondaryColor</item>
     </style>
 
     <style name="Button" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="android:backgroundTint">@color/primaryColor</item>
+        <item name="android:backgroundTint">@color/secondaryColor</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
     </style>
