--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="top_margin_text">30dp</dimen>
     <dimen name="margin_floating_button">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="icon_size">48dp</dimen>
 </resources>
