--- a/app/src/main/res/layout/fragment_note_description.xml
+++ b/app/src/main/res/layout/fragment_note_description.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cv_note_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/gray_200"
