--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,7 +13,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="actionModeBackground">@color/primaryLightColor</item>
+        <item name="actionModeStyle">@style/OnActionToolbar</item>
         <item name="windowActionModeOverlay">true</item>
+        <item name="actionModeCloseDrawable">@drawable/ic_baseline_close_24</item>
     </style>
 
     <style name="Title">
@@ -34,6 +36,10 @@
         <item name="android:backgroundTint">@color/secondaryLightColor</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="OnActionToolbar" parent="Widget.AppCompat.ActionMode">
+        <item name="background">@color/gray_200</item>
     </style>
 
 </resources>
