--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
                 <androidx.fragment.app.FragmentContainerView
                     android:id="@+id/fragment_container_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent" />
             </LinearLayout>
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
